--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>server1</module>
+        <module>eurekasumer1</module>
+        <module>eurekasumer</module>
+        <module>eurekaclient1</module>
+        <module>eurekaclient</module>
+        <module>eurekaserver2</module>
+        <module>eurekaserver1</module>
+        <module>eurekazuul</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
