--- a/eurekaconfigserver/src/main/resources/application.yml
+++ b/eurekaconfigserver/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 6061
-
 eureka:
   instance:
     prefer-ip-address: true
@@ -8,7 +7,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://eurekaserver1.com:8081/eureka/,http://eurekaserver2.com:8082/eureka/
-
 spring:
   application:
     name: eureka-config
@@ -16,10 +14,12 @@ spring:
     config:
       server:
         git:
-          #产库地址
           uri: https://github.com/lovefree624/application-yml.git
-          #用户名
           username: username
           password: password
-      # 分支
       label: master
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
