--- a/eurekaclient/src/main/resources/bootstrap.yml
+++ b/eurekaclient/src/main/resources/bootstrap.yml
@@ -1,16 +1,7 @@
-server:
-  port: 5051
-
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh
 
 spring:
   application:
-    name: config-client
+    name: application
   cloud:
     config:
       #分支
@@ -19,4 +10,3 @@ spring:
       profile: dev
       #configserver的地址
       uri: http://localhost:6061/
-#  config: classpath:logback-boot.xml
