--- a/eurekasumer1/src/main/resources/bootstrap.yml
+++ b/eurekasumer1/src/main/resources/bootstrap.yml
@@ -1,16 +1,11 @@
-server:
-  port: 5051
-
-
 management:
   endpoints:
     web:
       exposure:
-        include: refresh
-
+        include: bus-refresh
 spring:
   application:
-    name: config-client
+    name: eureak-sumer2
   cloud:
     config:
       #分支
