--- a/eurekaclient/src/main/resources/application.yml
+++ b/eurekaclient/src/main/resources/application.yml
@@ -13,12 +13,40 @@ eureka:
 spring:
   application:
     name: eureka-client
-#  datasource:
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql:///ceshi1?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false
-#    username: root
-#    password: admin
-#    type: com.alibaba.druid.pool.DruidDataSource
-#
-#mybatis:
-#  mapper-locations: classpath:/mapper/*.xml
+  datasource:
+    dynamic:
+      primary: one
+      mp-enabled: true
+      datasource:
+#        master:
+#          driver-class-name: com.mysql.cj.jdbc.Driver
+#          url: jdbc:mysql://localhost:3306/user?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+#          username: root
+#          password: admin
+#          type: com.alibaba.druid.pool.DruidDataSource
+#        slaves:
+          one:
+            driver-class-name: com.mysql.cj.jdbc.Driver
+            url: jdbc:mysql://localhost:3306/user?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+            username: root
+            password: admin
+            type: com.alibaba.druid.pool.DruidDataSource
+          two:
+            driver-class-name: com.mysql.cj.jdbc.Driver
+            url: jdbc:mysql://localhost:3306/user2?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+            username: root
+            password: admin
+            type: com.alibaba.druid.pool.DruidDataSource
+          three:
+            driver-class-name: com.mysql.cj.jdbc.Driver
+            url: jdbc:mysql://localhost:3306/user3?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+            username: root
+            password: admin
+            type: com.alibaba.druid.pool.DruidDataSource
+mybatis:
+  mapper-locations: classpath:/mapper/*.xml
+  config-location: classpath:/mybatis-config.xml
+
+logging:
+  level:
+    com.example.eurekaclient.mapper : debug
